@@ -1,7 +1,8 @@
 For 1.20.0:
 	- SpotLight - bounds checking on some parameters added.
 
-	- OcclusionQueries code revisited.
+	- OcclusionQueries code revisited so that un-rendered Shape nodes (eg, in Switch statements)
+	  do not generate OpenGL errors.
 
 For 1.19.9:
 	- Anchors were coded as being "sibling-sensitive" - this has been
